--- a/admin.html
+++ b/admin.html
@@ -107,7 +107,7 @@
 <script>
   // ============ CONFIG ADMIN ============
   // Change ce mot de passe (important)
-  const ADMIN_PASSWORD = "Emeraude2026!";
+  const ADMIN_PASSWORD = "20052005";
 
   // ============ STORAGE LOCAL ============
   const KEY = "emeraude_clients_v1";
